# payslip2budget

./: .gitignore  LICENSE  README.md  api-config.json  cli.py  pyproject.toml  setup.py
.github/workflows/: python-package.yml  python-tests.yml
exporters/: exporter.py
exporters/apihandlers/: apihandlerbase.py  ynab.py
formatters/: ynab.py
mappings/: categories.json
models/: transaction_base.py  ynab_transaction.py
parsers/: adp.py
payslip2budget/: cli.py
payslip2budget/exporters/: exporter.py
payslip2budget/exporters/apihandlers/: api-config.json.example  google-sheets-config.json.example  google_sheets.py  google_sheets_auth.py  ynab.py
payslip2budget/formatters/: mint.py
payslip2budget/models/: transaction_base.py  ynab_transaction.py
payslip2budget/parsers/: adp.py
tests/: .test_ynab_api_handler.py.swp  test_adp_parser.py  test_cli.py  test_google_sheets_api_handler.py  test_ynab_api_handler.py  test_ynab_formatter.py  test_ynab_transaction.py
tests/fixtures/: api-config.json  test_account_response_data.json  test_categories_response_data.json  test_payees_response_data.json  test_transactions_response_data.json
tests/utils/: fixtures.py
